Before matches creation/edit.

--- a/src/main/webapp/WEB-INF/template/main.xhtml
+++ b/src/main/webapp/WEB-INF/template/main.xhtml
@@ -24,7 +24,7 @@
         <div class="container">
             <header class="mb-4 mt-4">
                 <h1>Tournament Tracker</h1>
-                <h:graphicImage library="default" name="images/tournament_logo.png" alt="Tournament Tracker Logo" width="150"/>
+                <h:graphicImage library="images" name="tournament_tracker_logo.png" alt="Tournament Tracker Logo" width="150" height="150"/>
             </header>
 
             <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
