--- a/src/main/webapp/WEB-INF/template/main.xhtml
+++ b/src/main/webapp/WEB-INF/template/main.xhtml
@@ -25,6 +25,13 @@
             <header class="mb-4 mt-4">
                 <h1>Tournament Tracker</h1>
                 <h:graphicImage library="images" name="tournament_tracker_logo.png" alt="Tournament Tracker Logo" width="150" height="150"/>
+                <h:form styleClass="container d-flex  align-items-center justify-content-end"
+                        rendered="#{facesContext.externalContext.userPrincipal != null}">
+                    Logged: <h:outputText value="#{facesContext.externalContext.userPrincipal.name}"/>
+                    <h:commandButton styleClass="btn btn-link" value="Logout"
+                                     action="#{userLogout.logoutAction()}"/>
+                </h:form>
+
             </header>
 
             <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
@@ -33,9 +40,19 @@
                         <li class="nav-item">
                             <h:link styleClass="nav-link" outcome="/index.xhtml">Home</h:link>
                         </li>
+                        <h:panelGroup rendered="#{facesContext.externalContext.isUserInRole('admin')}">
+                            <li class="nav-item">
+                                <h:link styleClass="nav-link"
+                                        outcome="/user/user_list.xhtml">Users</h:link>
+                            </li>
+                        </h:panelGroup>
                         <li class="nav-item">
                             <h:link styleClass="nav-link"
                                     outcome="/tournament/tournament_list.xhtml">Tournaments</h:link>
+                        </li>
+                        <li class="nav-item">
+                            <h:link styleClass="nav-link"
+                                    outcome="/match/match_list.xhtml">Matches</h:link>
                         </li>
                     </ul>
                 </div>
