--- a/src/main/webapp/WEB-INF/template/main.xhtml
+++ b/src/main/webapp/WEB-INF/template/main.xhtml
@@ -28,7 +28,7 @@
                 <h:form styleClass="container d-flex  align-items-center justify-content-end"
                         rendered="#{facesContext.externalContext.userPrincipal != null}">
                     Logged: <h:outputText value="#{facesContext.externalContext.userPrincipal.name}"/>
-                    <h:commandButton styleClass="btn btn-link" value="Logout"
+                    <h:commandButton styleClass="btn btn-link" value="#{messages.logout}"
                                      action="#{userLogout.logoutAction()}"/>
                 </h:form>
 
@@ -38,21 +38,21 @@
                 <div class="container-fluid">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <h:link styleClass="nav-link" outcome="/index.xhtml">Home</h:link>
+                            <h:link styleClass="nav-link" outcome="/index.xhtml">#{messages['navigation.home']}</h:link>
                         </li>
                         <h:panelGroup rendered="#{facesContext.externalContext.isUserInRole('admin')}">
                             <li class="nav-item">
                                 <h:link styleClass="nav-link"
-                                        outcome="/user/user_list.xhtml">Users</h:link>
+                                        outcome="/user/user_list.xhtml">#{messages['navigation.users']}</h:link>
                             </li>
                         </h:panelGroup>
                         <li class="nav-item">
                             <h:link styleClass="nav-link"
-                                    outcome="/tournament/tournament_list.xhtml">Tournaments</h:link>
+                                    outcome="/tournament/tournament_list.xhtml">#{messages['navigation.tournaments']}</h:link>
                         </li>
                         <li class="nav-item">
                             <h:link styleClass="nav-link"
-                                    outcome="/match/match_list.xhtml">Matches</h:link>
+                                    outcome="/match/match_list.xhtml">#{messages['navigation.matches']}</h:link>
                         </li>
                     </ul>
                 </div>
