--- a/src/main/webapp/WEB-INF/template/main.xhtml
+++ b/src/main/webapp/WEB-INF/template/main.xhtml
@@ -27,7 +27,7 @@
                 <h:graphicImage library="images" name="tournament_tracker_logo.png" alt="Tournament Tracker Logo" width="150" height="150"/>
                 <h:form styleClass="container d-flex  align-items-center justify-content-end"
                         rendered="#{facesContext.externalContext.userPrincipal != null}">
-                    Logged: <h:outputText value="#{facesContext.externalContext.userPrincipal.name}"/>
+                    #{messages.logged}: <h:outputText value="#{facesContext.externalContext.userPrincipal.name}"/>
                     <h:commandButton styleClass="btn btn-link" value="#{messages.logout}"
                                      action="#{userLogout.logoutAction()}"/>
                 </h:form>
@@ -64,7 +64,7 @@
 
             <footer class="text-center text-lg-start bg-light text-muted p-2">
                 <div class="text-center">
-                    Copyright &#169; 2025-Current year, Maciej Góralczyk
+                    Copyright &#169; 2025-#{messages.currentYear}, Maciej Góralczyk
                 </div>
             </footer>
         </div>
