Before 7th lab.

--- a/src/main/webapp/WEB-INF/template/main.xhtml
+++ b/src/main/webapp/WEB-INF/template/main.xhtml
@@ -23,7 +23,7 @@
     <h:body>
         <div class="container">
             <header class="mb-4 mt-4">
-                <h1>Tournament Tracker</h1>
+                <h1>#{messages.pageName}</h1>
                 <h:graphicImage library="images" name="tournament_tracker_logo.png" alt="Tournament Tracker Logo" width="150" height="150"/>
                 <h:form styleClass="container d-flex  align-items-center justify-content-end"
                         rendered="#{facesContext.externalContext.userPrincipal != null}">
